clusters/prod-cluster/organizations/numen-games/maria/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyperfy2-numen-games-maria-deployment
  namespace: numen-games
  labels:
    environment: pro
    app: hyperfy2-numen-games-maria
    pod-type: hyperfy2-numen-games-maria
  annotations:
    keda.sh/auto-scaling: "enabled"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maria
      environment: pro
      pod-type: hyperfy2-numen-games-maria
  template:
    metadata:
      labels:
        app: maria
        environment: pro
        pod-type: hyperfy2-numen-games-maria
    spec:
      serviceAccountName: numen-games-aws-secret-manager-sa
      volumes:
        - name: hyperfy2-persistent-storage
          persistentVolumeClaim:
            claimName: numen-games-shared-pvc
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: hyperfy2-numen-games-maria-aws-secrets
      containers:
        - name: hyperfy2-numen-games-maria
          image: ghcr.io/numengames/numinia-hyperfy2:sha-1e16378a96bd315b35db7e19c92c998a39f9731f
          volumeMounts:
            - name: hyperfy2-persistent-storage
              mountPath: /mnt/hyperfy2-persistent-storage
              subPath: maria
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
          resources:
            requests:
              memory: ${MEMORY}
              cpu: ${CPU}
            limits:
              memory: ${LIMITS_MEMORY}
              cpu: ${LIMITS_CPU}
